// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`existing service page rendering 1`] = `
<div
  className={
    Object {
      "data-css-awku5i": "",
    }
  }
>
  <div
    className="nav ft-ll css-gf15pf"
  >
    <a
      href="/"
      onClick={[Function]}
    >
      Report a problem
    </a>
    <a
      href="/lookup"
      onClick={[Function]}
    >
      Case look up
    </a>
    <a
      href="/go"
      onClick={[Function]}
    >
      311 on the go
    </a>
    <a
      href="/faq"
      onClick={[Function]}
    >
      FAQ
    </a>
  </div>
  <div
    className={
      Object {
        "data-css-1nvfmj1": "",
      }
    }
  >
    <div
      className={
        Object {
          "data-css-1ldikjo": "",
        }
      }
    >
      <div
        className={
          Object {
            "data-css-1f2iwx6": "",
          }
        }
      >
        <div>
          <div
            className={
              Object {
                "data-css-dgukzt": "",
              }
            }
          >
            
          </div>
          <label>
            <p>
              Please provide any other relevant information:
               
            </p>
            <textarea
              className={
                Object {
                  "data-css-1bm19ha": "",
                }
              }
              name="ST-CMTS"
              onChange={[Function]}
              value=""
            />
          </label>
          <label>
            <p>
              **All cosmic incursion cases should be followed up with a phone call to Alpha Flight.**
               
            </p>
            <input
              className={
                Object {
                  "data-css-rqg0fb": "",
                }
              }
              name="INFO-CSIRMV1"
              onChange={[Function]}
              type="text"
              value=""
            />
          </label>
          <label>
            <p>
              How many dimensions have been breached?
               
              (required)
            </p>
            <select
              name="SR-CSIRMV1"
              onChange={[Function]}
              value={null}
            >
              <option
                disabled={true}
                selected={true}
              >
                Please choose
              </option>
              <option
                disabled={true}
              >
                --------------------------
              </option>
              <option
                value="One"
              >
                One
              </option>
              <option
                value="Two"
              >
                Two
              </option>
              <option
                value="Three"
              >
                Three
              </option>
              <option
                value="More than Three"
              >
                More than Three
              </option>
            </select>
          </label>
          <button
            disabled={false}
            onClick={[Function]}
          >
            Next
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`missing service page rendering 1`] = `
<div
  className={
    Object {
      "data-css-awku5i": "",
    }
  }
>
  <div
    className="nav ft-ll css-gf15pf"
  >
    <a
      href="/"
      onClick={[Function]}
    >
      Report a problem
    </a>
    <a
      href="/lookup"
      onClick={[Function]}
    >
      Case look up
    </a>
    <a
      href="/go"
      onClick={[Function]}
    >
      311 on the go
    </a>
    <a
      href="/faq"
      onClick={[Function]}
    >
      FAQ
    </a>
  </div>
  <div
    className={
      Object {
        "data-css-1nvfmj1": "",
      }
    }
  >
    <div
      className={
        Object {
          "data-css-1ldikjo": "",
        }
      }
    >
      <div
        className={
          Object {
            "data-css-1f2iwx6": "",
          }
        }
      >
        <div
          className="sh sh--y"
          style={
            Object {
              "marginBottom": 40,
            }
          }
        >
          <h2
            className="sh-title"
          >
            Service not found
          </h2>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`report form rendering 1`] = `
<div
  className={
    Object {
      "data-css-awku5i": "",
    }
  }
>
  <div
    className="nav ft-ll css-gf15pf"
  >
    <a
      href="/"
      onClick={[Function]}
    >
      Report a problem
    </a>
    <a
      href="/lookup"
      onClick={[Function]}
    >
      Case look up
    </a>
    <a
      href="/go"
      onClick={[Function]}
    >
      311 on the go
    </a>
    <a
      href="/faq"
      onClick={[Function]}
    >
      FAQ
    </a>
  </div>
  <div
    className={
      Object {
        "data-css-1nvfmj1": "",
      }
    }
  >
    <div
      className={
        Object {
          "data-css-1f2iwx6": "",
        }
      }
    >
      <div
        className="sh sh--y"
        style={
          Object {
            "marginBottom": 40,
          }
        }
      >
        <h2
          className="sh-title"
        >
          311: Boston City Services
        </h2>
      </div>
      <div
        className={
          Object {
            "data-css-9sglvw": "",
          }
        }
      >
        <textarea
          className={
            Object {
              "data-css-1j8x7ul": "",
            }
          }
          defaultValue=""
          name="description"
          onInput={[Function]}
          placeholder="How can we help?"
        />
        <ul
          className={
            Object {
              "data-css-18escyg": "",
            }
          }
        >
          <li
            className={
              Object {
                "data-css-14nloni": "",
              }
            }
          >
            <a
              className={
                Object {
                  "data-css-3br7c8": "",
                }
              }
              href="/report/CSMCINC/location"
              onClick={[Function]}
            >
              Cosmic Incursion
            </a>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;
